--- a/src/main/resources/fxml/game.fxml
+++ b/src/main/resources/fxml/game.fxml
@@ -2,11 +2,13 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
 
-<BorderPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1100.0" prefWidth="1000.0" stylesheets="@../css/game.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snake.controller.GameController">
+<BorderPane id="root" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1100.0" prefWidth="1000.0" stylesheets="@../css/game.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snake.controller.GameController">
    <top>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="1000.0" BorderPane.alignment="CENTER">
          <children>
@@ -24,6 +26,11 @@
       <Region prefHeight="42.0" prefWidth="1000.0" BorderPane.alignment="CENTER" />
    </bottom>
    <center>
-      <Canvas fx:id="canvas" height="840.0" width="840.0" />
+      <StackPane BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fx:id="viewBackground" fitHeight="840.0" fitWidth="840.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER" />
+            <Canvas fx:id="canvas" height="840.0" width="840.0" StackPane.alignment="CENTER" />
+         </children>
+      </StackPane>
    </center>
 </BorderPane>
